--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
   </section>
 
   <div id="controls">
-    <button id="prevBtn" class="btn btn-secondary" disabled>◀ Trước</button>
-    <button id="nextBtn" class="btn btn-primary">Tiếp ▶</button>
+    <button id="prevBtn" class="btn btn-secondary" disabled>◀</button>
+    <button id="nextBtn" class="btn btn-primary">▶</button>
     <button id="muteBtn" class="btn btn-secondary">🔊</button>
-    <button id="toggleTimelineBtn" class="btn btn-secondary">🖼️ Ẩn/hiện vùng ki ước</button>
+    <button id="toggleTimelineBtn" class="btn btn-secondary">🖼️</button>
   </div>
 
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" defer></script>
